[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Alford Miller"]

[dependencies]
bevy = "0.14.1"
log = {version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }

[workspace]

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
#LegalCopyright = "Copyright 2024 @ Herbert Wolverson (Modified by Alford Miller)"
#edition = "2021"
#OriginalFilename = "dungeoncrawl.exe"
#langID = "0x0409"

#Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
