[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Alford Miller"]

[dependencies]
bevy = "0.14.1"
log = {version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }

[workspace]

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
#LegalCopyright = "Copyright 2024 @ Herbert Wolverson (Modified by Alford Miller)"
#edition = "2021"
#OriginalFilename = "dungeoncrawl.exe"
#langID = "0x0409"

#Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"